# multiped

./: .codacy.yml  .gitignore  .travis.yml  LICENSE  README.rst  debug.md  pyproject.toml  readme.md  requirements.txt  setup.py
.github/workflows/: python.yaml
ax-12-hardware/: F1.stl  femur.stl  leg.scad  test.scad
ax-12-hardware/other/: tarsus.stl  tibia-crossbar.stl
ax12/: readme.md
ax12/ax-12-hardware/: F5.stl
ax12/docs/: ani.py  gait.ipynb  kinematics-orig.ipynb  kinematics.ipynb  old-gait.ipynb  test-Copy1.ipynb  test.ipynb
ax12/electrical/: readme.md
ax12/examples/: leg-test.py  robot.py  servo-test.py  test-robot.py
ax12/mechanical/: base.scad  camera-mount.scad  common.scad  coxa.scad  femur.scad  head.scad  leg.scad  misc.scad  new-head-2.scad  new-head-3.scad  new-head-4.scad  new-head.scad  parts.scad  pi.scad  power.scad  quad.scad  readme.md  robot-2.scad  robot.scad  robotis_parts.scad  sternum-2.scad  sternum.scad  tarsus.scad  tibia.scad
ax12/mechanical-hw/: head.scad  leg.scad  quad.scad  readme.md  sternum.scad
ax12/pygecko/: blinky.py  imu.py  launch.json  launch.yml  led_matrix.py  lidar.py  messages.py  move.py  readme.md  requirements.txt  robot.py  run.sh  slam.py  vision.py
ax12/testing/: Gait2.py  plotting.py  robot-2.py
dev/hex/: hex.py  params.py  robot.py  test.py
dev/hex_sim/: params.py  robot.py
docs/: index.html  readme.md
docs/Markdown/: bom.md  history.md  misc.md  pi-camera.rst  power.md  readme.md  software.md
docs/ax12-version/: kinematics.ipynb  lynx_al5d-3.ipynb
docs/install_software/: readme.md
docs/ipython/: DH.ipynb  Gait.ipynb  Gait_Code_Check.ipynb  OpenCV_test.ipynb  ahrs.ipynb  cm.ipynb  torque.ipynb
docs/jupyter/: gait.ipynb  kinematics-R3.ipynb  torque.ipynb
docs/openscad/: quad-3-links.scad  quad-4-links.scad
docs/usbserial/: old_serial.rst  readme.md
electrical_hw/electronics/: robot.sch
electrical_hw/serial-port/: serial-cache.lib  serial.bak  serial.kicad_pcb  serial.kicad_pcb-bak  serial.net  serial.pro  serial.sch  serial.xml
examples/: Example.py  Robot.py  js.py  js_robot.py  test_walk.py  walkingeye.json
hardware/: README.md
hardware/darwin-mini/: xl320_dummy.stl
hardware/nico/: tibiaLong_SLA.STL
hardware/openscad/: README.md  (+4 more)
multiped/: Engine.py  Robot.py  __init__.py  engine.py  gait.py  jsonFile.py  kinematics3.py  kinematics4.py  robot.py  servo.py  utils.py
quadruped/: ContinousGait.py  Correction.py  Engine.py  Gait.py  Leg.py  Leg3.py  Leg4.py  Robot.py  Servo.py  __init__.py  jsonFile.py  misc_gaits.py  packetDecoder.py
tablet/: readme.md
tests/: test.py  test_all.py  test_leg.py  test_servo.py
xl320/: readme.md  readme.rst
(+375 files in other folders)
