[tool.poetry]
name = "multiped"
version = "0.5.1"
description = "Yet another robot python driver"
authors = ["walchko <walchko@users.noreply.github.com>"]
readme = "readme.md"
license = "MIT"
homepage = "https://pypi.org/project/multiped/"
repository = 'http://github.com/MultipedRobotics/multiped'
# documentation = "http://..."
keywords = ["dynamixel", "servo", "smart", "multiped", "hexapod", "quadruped"]
classifiers = [
    'Development Status :: 4 - Beta',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: MIT License',
    'Operating System :: OS Independent',
    'Programming Language :: Python :: 3.6',
    'Programming Language :: Python :: 3.7',
    'Programming Language :: Python :: 3.8',
    'Topic :: Software Development :: Libraries',
    'Topic :: Software Development :: Libraries :: Python Modules',
    'Topic :: Software Development :: Libraries :: Application Frameworks'
]

# [tool.poetry.scripts]
# get_leg_info = 'multiped.bin.get_leg_info.py:main',
# get_leg_angles = 'multiped.bin.get_leg_angles.py:main'

[tool.poetry.dependencies]
python = ">=3.6"
# mdh = "*"
colorama = "*"
pyservos = ">=2.0.1"
simplejson = "*"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
# mypy = "*"

# [mypy-pi_servo_serial]
# ignore_missing_imports = True

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
